Added functionality to get scores from database
